# RoboticsKinematicsSolver

./: .gitignore  CMakeLists.txt  README.md  examples.cpp  install.sh  visualize_robot.py
docs/: Doxyfile
docs/html/: ThreeDOFRRR_8hpp.html  ThreeDOFRRR_8hpp__incl.map  ThreeDOFRRR_8hpp__incl.md5  ThreeDOFRRR_8hpp_source.html  annotated.html  classBarEnvironment-members.html  classBarEnvironment.html  classBarEnvironment__coll__graph.map  classBarEnvironment__inherit__graph.md5  classBase-members.html  classBase.html  classBiggestIntConvertible-members.html  classBiggestIntConvertible.html  classChildClassWithStreamOperator.html  classChildClassWithStreamOperator__coll__graph.map  classChildClassWithStreamOperator__inherit__graph.md5  classChildClassWithoutStreamOperator.html  classChildClassWithoutStreamOperator__coll__graph.map  classChildClassWithoutStreamOperator__coll__graph.md5  classCommentTest.html  classCommentTest__inherit__graph.map  classCommentTest__inherit__graph.md5  classCommonTest-members.html  classCommonTest.html  classCommonTest__coll__graph.map  classCommonTest__coll__graph.md5  classCommonTest__inherit__graph.map  classCommonTest__inherit__graph.md5  classContainerTest-members.html  classContainerTest.html  classContainerTest__coll__graph.map  classContainerTest__inherit__graph.md5  classConversionHelperBase.html  classConversionHelperBase__inherit__graph.map  classConversionHelperBase__inherit__graph.md5  classConversionHelperDerived.html  classConversionHelperDerived__coll__graph.map  classConversionHelperDerived__inherit__graph.md5  classCounter-members.html  classCounter.html  (+2240 more)
docs/latex/: ThreeDOFRRR_8hpp.tex  ThreeDOFRRR_8hpp__incl.md5  annotated.tex  classBarEnvironment.tex  classBarEnvironment__coll__graph.md5  classBase.tex  classBiggestIntConvertible.tex  classChildClassWithStreamOperator.tex  classChildClassWithStreamOperator__coll__graph.md5  classChildClassWithoutStreamOperator.tex  classChildClassWithoutStreamOperator__inherit__graph.md5  classCommentTest.tex  classCommentTest__coll__graph.md5  classCommonTest.tex  classCommonTest__coll__graph.md5  classCommonTest__inherit__graph.md5  classContainerTest.tex  classContainerTest__coll__graph.md5  classConversionHelperBase.tex  classConversionHelperBase__inherit__graph.md5  classConversionHelperDerived.tex  classConversionHelperDerived__coll__graph.md5  classCounter.tex  classCustomFunctionNamingTest.tex  (+789 more)
examples/: examples.cpp
src/: CMakeLists.txt  ThreeDOFRRR.cpp
tests/: CMakeLists.txt  test_main.cpp
(+78 files in other folders)
